[gd_scene load_steps=3 format=3 uid="uid://vha8ujknia5b"]

[ext_resource type="Script" uid="uid://bhy4ca4xh6wgg" path="res://Scripts/game_mode_select.gd" id="1_3aue6"]
[ext_resource type="Script" uid="uid://cww2cxqfgy5s5" path="res://Scripts/chiron_button.gd" id="2_1fq1s"]

[node name="GameModeSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3aue6")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Background"]
layout_mode = 2
offset_left = 836.0
offset_top = 595.0
offset_right = 946.0
offset_bottom = 626.0
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "God Select"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ApolloButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Apollo"

[node name="HermesButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Hermes"

[node name="ArtemisButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Artemis"

[node name="DemeterButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Demeter"

[node name="AphroditeButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Aphrodite"

[node name="DionysusButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Dionysus"

[node name="AthenaButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Athena"

[node name="ChironButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -142.0
offset_top = -53.0
offset_right = -31.0
offset_bottom = -22.0
grow_horizontal = 0
grow_vertical = 0
text = "Visit Chiron"
script = ExtResource("2_1fq1s")

[connection signal="pressed" from="Background/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ApolloButton" to="." method="_on_apollo_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HermesButton" to="." method="_on_hermes_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ArtemisButton" to="." method="_on_artemis_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AphroditeButton" to="." method="_on_aphrodite_button_pressed"]
